--- a/notebook/02_MODEL_TRAINING.ipynb
+++ b/notebook/02_MODEL_TRAINING.ipynb
@@ -5,30 +5,634 @@
    "id": "896f7c15",
    "metadata": {},
    "source": [
-    "# Import libraries and data"
+    "# 1. Import libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bebd9815",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, f1_score,log_loss, confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, f1_score,log_loss, confusion_matrix, recall_score, fbeta_score\n",
+    "import pandas as pd\n",
     "\n",
-    "from catboost import Pool, CatBoostClassifer\n",
+    "from catboost import Pool, CatBoostClassifier\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbbfb679",
+   "metadata": {},
+   "source": [
+    "# 2. Import data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2fc8ecba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoking</th>\n",
+       "      <th>GeneticRisk</th>\n",
+       "      <th>PhysicalActivity</th>\n",
+       "      <th>AlcoholIntake</th>\n",
+       "      <th>CancerHistory</th>\n",
+       "      <th>Diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.085313</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.146251</td>\n",
+       "      <td>4.148219</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>71</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.828784</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.361630</td>\n",
+       "      <td>3.519683</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.785084</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.135179</td>\n",
+       "      <td>4.728368</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.040296</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.502792</td>\n",
+       "      <td>2.044636</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>62</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.479721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.356890</td>\n",
+       "      <td>3.309849</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Gender        BMI  Smoking  GeneticRisk  PhysicalActivity  \\\n",
+       "0   58       1  16.085313        0            1          8.146251   \n",
+       "1   71       0  30.828784        0            1          9.361630   \n",
+       "2   48       1  38.785084        0            2          5.135179   \n",
+       "3   34       0  30.040296        0            0          9.502792   \n",
+       "4   62       1  35.479721        0            0          5.356890   \n",
+       "\n",
+       "   AlcoholIntake  CancerHistory  Diagnosis  \n",
+       "0       4.148219              1          1  \n",
+       "1       3.519683              0          0  \n",
+       "2       4.728368              0          1  \n",
+       "3       2.044636              0          0  \n",
+       "4       3.309849              0          1  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('data/The_Cancer_data_1500_V2.csv')\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "184def33",
+   "metadata": {},
+   "source": [
+    "# 3. Preprocess data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd7c76f5",
+   "metadata": {},
+   "source": [
+    "## 3.1 Assign features and target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "68a1f007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'Diagnosis'\n",
+    "features = data.columns.drop(target).tolist()\n",
+    "\n",
+    "X = data.loc[:, features]\n",
+    "y = data.loc[:, target]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ac5165",
+   "metadata": {},
+   "source": [
+    "## 3.2 Transform feature columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4223152c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_features= ['Gender', 'Smoking', 'GeneticRisk', 'CancerHistory']\n",
+    "num_features = [col for col in X if col not in cat_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bbf78305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "num_transform = StandardScaler()\n",
+    "\n",
+    "X[num_features] = num_transform.fit_transform(X[num_features])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "21f3e43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoking</th>\n",
+       "      <th>GeneticRisk</th>\n",
+       "      <th>PhysicalActivity</th>\n",
+       "      <th>AlcoholIntake</th>\n",
+       "      <th>CancerHistory</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.435495</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.581162</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.133713</td>\n",
+       "      <td>1.219465</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.172662</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.458722</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.557899</td>\n",
+       "      <td>0.776474</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Age  Gender       BMI  Smoking  GeneticRisk  PhysicalActivity  \\\n",
+       "0  0.435495       1 -1.581162        0            1          1.133713   \n",
+       "1  1.172662       0  0.458722        0            1          1.557899   \n",
+       "\n",
+       "   AlcoholIntake  CancerHistory  \n",
+       "0       1.219465              1  \n",
+       "1       0.776474              0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.iloc[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf34ba1b",
+   "metadata": {},
+   "source": [
+    "## 3.3 Split data into train and test split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6fd56c45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1200, 8), (300, 8), (1200,), (300,))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True)\n",
+    "\n",
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b69eac2",
+   "metadata": {},
+   "source": [
+    "# 4. Train models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cf0bf75",
+   "metadata": {},
+   "source": [
+    "## 4.1 Create a model evaluation function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2dfb533",
+   "metadata": {},
+   "source": [
+    "In the real world application of our model's predictions, false negatives are costlier than false positives.\n",
+    "\n",
+    "Hence, our priority metrics will be **Recall** and **F2 score** because these metrics score models with little false negatives in their predictions higher.\n",
+    "\n",
+    "This will help us choose a model that will perform best in the practical applications."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "30f593bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(y_true, y_pred):\n",
+    "    logloss = log_loss(y_true, y_pred)\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    recall = recall_score(y_true, y_pred)\n",
+    "    f2score = fbeta_score(y_true, y_pred, beta=2.0)\n",
+    "    auc = roc_auc_score(y_true, y_pred)\n",
+    "    confusion_mtx = confusion_matrix(y_true, y_pred)\n",
+    "\n",
+    "    return {'logloss': logloss, 'accuracy': accuracy, 'recall': recall, 'f2score': f2score, 'auc': auc, 'confusion_matrix': confusion_mtx}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87ed8328",
+   "metadata": {},
+   "source": [
+    "## 4.2 Experiment with different algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3193220a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale_pos_weight = sum(data.Diagnosis == 0)/sum(data.Diagnosis == 1)\n",
+    "\n",
+    "seed = 0\n",
+    "models = {\n",
+    "    'CatBoostClassifier': CatBoostClassifier(verbose=False, random_seed=seed),\n",
+    "    'CatBoostClassifier (scale_pos_weight)': CatBoostClassifier(verbose=False, scale_pos_weight=scale_pos_weight, random_state=seed),\n",
+    "    'RandomForestClassifier': RandomForestClassifier(verbose=False, random_state=seed),\n",
+    "    'RandomForestClassifier (Balanced class_weight)': RandomForestClassifier(verbose=False, class_weight='balanced', random_state=seed),\n",
+    "    'AdaBoostClassifier': AdaBoostClassifier(random_state=seed),\n",
+    "}\n",
+    "model_scores = {}\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    metrics = evaluate_model(y_test, y_pred)\n",
+    "    model_scores[name] = metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "50d90204",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>logloss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f2score</th>\n",
+       "      <th>auc</th>\n",
+       "      <th>confusion_matrix</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>CatBoostClassifier (scale_pos_weight)</th>\n",
+       "      <td>2.042474</td>\n",
+       "      <td>0.943333</td>\n",
+       "      <td>0.905172</td>\n",
+       "      <td>0.913043</td>\n",
+       "      <td>0.936282</td>\n",
+       "      <td>[[178, 6], [11, 105]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CatBoostClassifier</th>\n",
+       "      <td>2.042474</td>\n",
+       "      <td>0.943333</td>\n",
+       "      <td>0.896552</td>\n",
+       "      <td>0.907504</td>\n",
+       "      <td>0.934689</td>\n",
+       "      <td>[[179, 5], [12, 104]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdaBoostClassifier</th>\n",
+       "      <td>1.922328</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.87931</td>\n",
+       "      <td>0.897887</td>\n",
+       "      <td>0.93422</td>\n",
+       "      <td>[[182, 2], [14, 102]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestClassifier</th>\n",
+       "      <td>2.643201</td>\n",
+       "      <td>0.926667</td>\n",
+       "      <td>0.87069</td>\n",
+       "      <td>0.882867</td>\n",
+       "      <td>0.916323</td>\n",
+       "      <td>[[177, 7], [15, 101]]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RandomForestClassifier (Balanced class_weight)</th>\n",
+       "      <td>2.643201</td>\n",
+       "      <td>0.926667</td>\n",
+       "      <td>0.87069</td>\n",
+       "      <td>0.882867</td>\n",
+       "      <td>0.916323</td>\n",
+       "      <td>[[177, 7], [15, 101]]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 logloss  accuracy    recall  \\\n",
+       "CatBoostClassifier (scale_pos_weight)           2.042474  0.943333  0.905172   \n",
+       "CatBoostClassifier                              2.042474  0.943333  0.896552   \n",
+       "AdaBoostClassifier                              1.922328  0.946667   0.87931   \n",
+       "RandomForestClassifier                          2.643201  0.926667   0.87069   \n",
+       "RandomForestClassifier (Balanced class_weight)  2.643201  0.926667   0.87069   \n",
+       "\n",
+       "                                                 f2score       auc  \\\n",
+       "CatBoostClassifier (scale_pos_weight)           0.913043  0.936282   \n",
+       "CatBoostClassifier                              0.907504  0.934689   \n",
+       "AdaBoostClassifier                              0.897887   0.93422   \n",
+       "RandomForestClassifier                          0.882867  0.916323   \n",
+       "RandomForestClassifier (Balanced class_weight)  0.882867  0.916323   \n",
+       "\n",
+       "                                                     confusion_matrix  \n",
+       "CatBoostClassifier (scale_pos_weight)           [[178, 6], [11, 105]]  \n",
+       "CatBoostClassifier                              [[179, 5], [12, 104]]  \n",
+       "AdaBoostClassifier                              [[182, 2], [14, 102]]  \n",
+       "RandomForestClassifier                          [[177, 7], [15, 101]]  \n",
+       "RandomForestClassifier (Balanced class_weight)  [[177, 7], [15, 101]]  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = pd.DataFrame(model_scores).sort_values(by='f2score', axis=1, ascending=False).T\n",
+    "scores.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f59b61c9",
+   "metadata": {},
+   "source": [
+    "The `CatBoostClassifier` model with `scale_pos_weight` provided performs best in our metrics of top priority: Recall & F2 score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38eaa731",
+   "metadata": {},
+   "source": [
+    "## 4.3 Train the best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "688c220d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate set to 0.011136\n",
+      "0:\tlearn: 0.9140855\ttotal: 8.38ms\tremaining: 8.37s\n",
+      "100:\tlearn: 0.9740146\ttotal: 514ms\tremaining: 4.58s\n",
+      "200:\tlearn: 0.9778118\ttotal: 1.03s\tremaining: 4.08s\n",
+      "300:\tlearn: 0.9812538\ttotal: 1.54s\tremaining: 3.58s\n",
+      "400:\tlearn: 0.9839230\ttotal: 1.99s\tremaining: 2.97s\n",
+      "500:\tlearn: 0.9866026\ttotal: 2.44s\tremaining: 2.43s\n",
+      "600:\tlearn: 0.9891529\ttotal: 2.88s\tremaining: 1.91s\n",
+      "700:\tlearn: 0.9921700\ttotal: 3.32s\tremaining: 1.42s\n",
+      "800:\tlearn: 0.9944053\ttotal: 3.77s\tremaining: 937ms\n",
+      "900:\tlearn: 0.9957552\ttotal: 4.23s\tremaining: 465ms\n",
+      "999:\tlearn: 0.9966948\ttotal: 4.67s\tremaining: 0us\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = CatBoostClassifier(scale_pos_weight=scale_pos_weight, eval_metric='PRAUC', early_stopping_rounds=50, verbose=100)\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "metrics = evaluate_model(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "530267c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'logloss': 2.042473692049972,\n",
+       " 'accuracy': 0.9433333333333334,\n",
+       " 'recall': 0.9051724137931034,\n",
+       " 'f2score': 0.9130434782608695,\n",
+       " 'auc': 0.9362818590704647,\n",
+       " 'confusion_matrix': array([[178,   6],\n",
+       "        [ 11, 105]])}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
