Removed unused imports

--- a/notebook/02_MODEL_TRAINING.ipynb
+++ b/notebook/02_MODEL_TRAINING.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bebd9815",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, f1_score,log_loss, confusion_matrix, recall_score, fbeta_score\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, log_loss, confusion_matrix, recall_score, fbeta_score\n",
     "import pandas as pd\n",
     "\n",
-    "from catboost import Pool, CatBoostClassifier\n",
+    "from catboost import CatBoostClassifier\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
