Added data transformation component

--- a/notebook/02_MODEL_TRAINING.ipynb
+++ b/notebook/02_MODEL_TRAINING.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bebd9815",
    "metadata": {},
    "outputs": [],
@@ -196,27 +196,58 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ac5165",
+   "id": "cf34ba1b",
    "metadata": {},
    "source": [
-    "## 3.2 Transform feature columns"
+    "## 3.2 Split data into train and test split"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4223152c",
+   "id": "6fd56c45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1200, 8), (300, 8), (1200,), (300,))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cat_features= ['Gender', 'Smoking', 'GeneticRisk', 'CancerHistory']\n",
-    "num_features = [col for col in X if col not in cat_features]"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True)\n",
+    "\n",
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ac5165",
+   "metadata": {},
+   "source": [
+    "## 3.3 Transform features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bbf78305",
+   "execution_count": 15,
+   "id": "8cce89c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_features= ['Gender', 'Smoking', 'GeneticRisk', 'CancerHistory']\n",
+    "num_features = [col for col in X.columns if col not in cat_features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "14fff01e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,13 +255,14 @@
     "\n",
     "num_transform = StandardScaler()\n",
     "\n",
-    "X[num_features] = num_transform.fit_transform(X[num_features])"
+    "X_train[num_features] = num_transform.fit_transform(X_train[num_features])\n",
+    "X_test[num_features] = num_transform.transform(X_test[num_features])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "21f3e43f",
+   "execution_count": 17,
+   "id": "35960f35",
    "metadata": {},
    "outputs": [
     {
@@ -266,25 +298,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.435495</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.581162</td>\n",
+       "      <th>382</th>\n",
+       "      <td>-0.357508</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.133713</td>\n",
-       "      <td>1.219465</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.281283</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.800765</td>\n",
+       "      <td>1.180046</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.172662</td>\n",
+       "      <th>538</th>\n",
+       "      <td>0.598472</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.458722</td>\n",
+       "      <td>-1.369009</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.557899</td>\n",
-       "      <td>0.776474</td>\n",
+       "      <td>-0.068029</td>\n",
+       "      <td>1.635770</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -292,53 +324,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        Age  Gender       BMI  Smoking  GeneticRisk  PhysicalActivity  \\\n",
-       "0  0.435495       1 -1.581162        0            1          1.133713   \n",
-       "1  1.172662       0  0.458722        0            1          1.557899   \n",
+       "          Age  Gender       BMI  Smoking  GeneticRisk  PhysicalActivity  \\\n",
+       "382 -0.357508       0  0.281283        0            0          0.800765   \n",
+       "538  0.598472       0 -1.369009        0            1         -0.068029   \n",
        "\n",
-       "   AlcoholIntake  CancerHistory  \n",
-       "0       1.219465              1  \n",
-       "1       0.776474              0  "
+       "     AlcoholIntake  CancerHistory  \n",
+       "382       1.180046              0  \n",
+       "538       1.635770              0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X.iloc[:2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf34ba1b",
-   "metadata": {},
-   "source": [
-    "## 3.3 Split data into train and test split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6fd56c45",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1200, 8), (300, 8), (1200,), (300,))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True)\n",
-    "\n",
-    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
+    "X_train.head(2)"
    ]
   },
   {
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "30f593bb",
    "metadata": {},
    "outputs": [],
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "3193220a",
    "metadata": {},
    "outputs": [],
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "50d90204",
    "metadata": {},
    "outputs": [
@@ -529,7 +530,7 @@
        "RandomForestClassifier (Balanced class_weight)  [[177, 7], [15, 101]]  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +545,7 @@
    "id": "f59b61c9",
    "metadata": {},
    "source": [
-    "The `CatBoostClassifier` model with `scale_pos_weight` provided performs best in our metrics of top priority: Recall & F2 score"
+    "The `CatBoostClassifier` model with `scale_pos_weight` provided performs best in our top priority metrics: Recall & F2 score"
    ]
   },
   {
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "id": "688c220d",
    "metadata": {},
    "outputs": [
@@ -566,17 +567,17 @@
      "output_type": "stream",
      "text": [
       "Learning rate set to 0.011136\n",
-      "0:\tlearn: 0.9140855\ttotal: 8.38ms\tremaining: 8.37s\n",
-      "100:\tlearn: 0.9740146\ttotal: 514ms\tremaining: 4.58s\n",
-      "200:\tlearn: 0.9778118\ttotal: 1.03s\tremaining: 4.08s\n",
-      "300:\tlearn: 0.9812538\ttotal: 1.54s\tremaining: 3.58s\n",
-      "400:\tlearn: 0.9839230\ttotal: 1.99s\tremaining: 2.97s\n",
-      "500:\tlearn: 0.9866026\ttotal: 2.44s\tremaining: 2.43s\n",
-      "600:\tlearn: 0.9891529\ttotal: 2.88s\tremaining: 1.91s\n",
-      "700:\tlearn: 0.9921700\ttotal: 3.32s\tremaining: 1.42s\n",
-      "800:\tlearn: 0.9944053\ttotal: 3.77s\tremaining: 937ms\n",
-      "900:\tlearn: 0.9957552\ttotal: 4.23s\tremaining: 465ms\n",
-      "999:\tlearn: 0.9966948\ttotal: 4.67s\tremaining: 0us\n"
+      "0:\tlearn: 0.9140855\ttotal: 6.1ms\tremaining: 6.09s\n",
+      "100:\tlearn: 0.9740146\ttotal: 540ms\tremaining: 4.8s\n",
+      "200:\tlearn: 0.9778118\ttotal: 1.07s\tremaining: 4.25s\n",
+      "300:\tlearn: 0.9812538\ttotal: 1.55s\tremaining: 3.61s\n",
+      "400:\tlearn: 0.9839230\ttotal: 2.01s\tremaining: 3.01s\n",
+      "500:\tlearn: 0.9866026\ttotal: 2.5s\tremaining: 2.49s\n",
+      "600:\tlearn: 0.9891529\ttotal: 2.95s\tremaining: 1.96s\n",
+      "700:\tlearn: 0.9921700\ttotal: 3.42s\tremaining: 1.46s\n",
+      "800:\tlearn: 0.9944053\ttotal: 3.92s\tremaining: 974ms\n",
+      "900:\tlearn: 0.9957552\ttotal: 4.39s\tremaining: 482ms\n",
+      "999:\tlearn: 0.9966948\ttotal: 4.84s\tremaining: 0us\n"
      ]
     }
    ],
@@ -584,13 +585,12 @@
     "model = CatBoostClassifier(scale_pos_weight=scale_pos_weight, eval_metric='PRAUC', early_stopping_rounds=50, verbose=100)\n",
     "\n",
     "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)\n",
-    "metrics = evaluate_model(y_test, y_pred)"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "530267c0",
    "metadata": {},
    "outputs": [
@@ -606,13 +606,14 @@
        "        [ 11, 105]])}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics\n"
+    "metrics = evaluate_model(y_test, y_pred)\n",
+    "metrics"
    ]
   }
  ],
