Added model trainer

--- a/notebook/02_MODEL_TRAINING.ipynb
+++ b/notebook/02_MODEL_TRAINING.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bebd9815",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, log_loss, confusion_matrix, recall_score, fbeta_score\n",
+    "from sklearn.metrics import roc_auc_score, log_loss, recall_score, fbeta_score\n",
     "import pandas as pd\n",
     "\n",
     "from catboost import CatBoostClassifier\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2fc8ecba",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6fd56c45",
    "metadata": {},
    "outputs": [
@@ -214,13 +214,13 @@
        "((1200, 8), (300, 8), (1200,), (300,))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y, shuffle=True)\n",
     "\n",
     "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "8cce89c2",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "14fff01e",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "35960f35",
    "metadata": {},
    "outputs": [
@@ -298,25 +298,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>-0.357508</td>\n",
+       "      <th>1376</th>\n",
+       "      <td>-0.287156</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.281283</td>\n",
+       "      <td>-0.458439</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.800765</td>\n",
-       "      <td>1.180046</td>\n",
+       "      <td>-0.037009</td>\n",
+       "      <td>-1.159941</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>0.598472</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-1.369009</td>\n",
-       "      <td>0</td>\n",
+       "      <th>787</th>\n",
+       "      <td>0.619056</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.068029</td>\n",
-       "      <td>1.635770</td>\n",
+       "      <td>-0.413965</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.138655</td>\n",
+       "      <td>-0.082026</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -324,16 +324,16 @@
        "</div>"
       ],
       "text/plain": [
-       "          Age  Gender       BMI  Smoking  GeneticRisk  PhysicalActivity  \\\n",
-       "382 -0.357508       0  0.281283        0            0          0.800765   \n",
-       "538  0.598472       0 -1.369009        0            1         -0.068029   \n",
+       "           Age  Gender       BMI  Smoking  GeneticRisk  PhysicalActivity  \\\n",
+       "1376 -0.287156       0 -0.458439        0            0         -0.037009   \n",
+       "787   0.619056       1 -0.413965        0            2         -1.138655   \n",
        "\n",
-       "     AlcoholIntake  CancerHistory  \n",
-       "382       1.180046              0  \n",
-       "538       1.635770              0  "
+       "      AlcoholIntake  CancerHistory  \n",
+       "1376      -1.159941              0  \n",
+       "787       -0.082026              0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,20 +372,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "30f593bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_model(y_true, y_pred):\n",
+    "def get_metric_scores(y_true, y_pred):\n",
     "    logloss = log_loss(y_true, y_pred)\n",
-    "    accuracy = accuracy_score(y_true, y_pred)\n",
     "    recall = recall_score(y_true, y_pred)\n",
     "    f2score = fbeta_score(y_true, y_pred, beta=2.0)\n",
     "    auc = roc_auc_score(y_true, y_pred)\n",
-    "    confusion_mtx = confusion_matrix(y_true, y_pred)\n",
     "\n",
-    "    return {'logloss': logloss, 'accuracy': accuracy, 'recall': recall, 'f2score': f2score, 'auc': auc, 'confusion_matrix': confusion_mtx}"
+    "    return {'logloss': logloss, 'recall': recall, 'f2score': f2score, 'auc': auc}\n",
+    "\n",
+    "def evaluate_models(X_train, y_train, X_test, y_test, models:dict):\n",
+    "    model_scores = {}\n",
+    "\n",
+    "    for name, model in models.items():\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        metrics = get_metric_scores(y_test, y_pred)\n",
+    "        model_scores[name] = metrics\n",
+    "    return model_scores"
    ]
   },
   {
@@ -398,12 +406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3193220a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale_pos_weight = sum(data.Diagnosis == 0)/sum(data.Diagnosis == 1)\n",
+    "scale_pos_weight = sum(y_train == 0)/sum(y_train == 1)\n",
     "\n",
     "seed = 0\n",
     "models = {\n",
@@ -413,19 +421,14 @@
     "    'RandomForestClassifier (Balanced class_weight)': RandomForestClassifier(verbose=False, class_weight='balanced', random_state=seed),\n",
     "    'AdaBoostClassifier': AdaBoostClassifier(random_state=seed),\n",
     "}\n",
-    "model_scores = {}\n",
     "\n",
-    "for name, model in models.items():\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    metrics = evaluate_model(y_test, y_pred)\n",
-    "    model_scores[name] = metrics"
+    "model_scores = evaluate_models(X_train, y_train, X_test, y_test, models)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "50d90204",
+   "execution_count": null,
+   "id": "566071d3",
    "metadata": {},
    "outputs": [
     {
@@ -450,94 +453,75 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>logloss</th>\n",
-       "      <th>accuracy</th>\n",
        "      <th>recall</th>\n",
        "      <th>f2score</th>\n",
        "      <th>auc</th>\n",
-       "      <th>confusion_matrix</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CatBoostClassifier (scale_pos_weight)</th>\n",
-       "      <td>2.042474</td>\n",
-       "      <td>0.943333</td>\n",
-       "      <td>0.905172</td>\n",
-       "      <td>0.913043</td>\n",
-       "      <td>0.936282</td>\n",
-       "      <td>[[178, 6], [11, 105]]</td>\n",
+       "      <td>1.081310</td>\n",
+       "      <td>0.936937</td>\n",
+       "      <td>0.945455</td>\n",
+       "      <td>0.963177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CatBoostClassifier</th>\n",
-       "      <td>2.042474</td>\n",
-       "      <td>0.943333</td>\n",
-       "      <td>0.896552</td>\n",
-       "      <td>0.907504</td>\n",
-       "      <td>0.934689</td>\n",
-       "      <td>[[179, 5], [12, 104]]</td>\n",
+       "      <td>1.201455</td>\n",
+       "      <td>0.918919</td>\n",
+       "      <td>0.932358</td>\n",
+       "      <td>0.956814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>AdaBoostClassifier</th>\n",
-       "      <td>1.922328</td>\n",
-       "      <td>0.946667</td>\n",
-       "      <td>0.87931</td>\n",
-       "      <td>0.897887</td>\n",
-       "      <td>0.93422</td>\n",
-       "      <td>[[182, 2], [14, 102]]</td>\n",
+       "      <td>1.441746</td>\n",
+       "      <td>0.900901</td>\n",
+       "      <td>0.917431</td>\n",
+       "      <td>0.947805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForestClassifier</th>\n",
-       "      <td>2.643201</td>\n",
-       "      <td>0.926667</td>\n",
-       "      <td>0.87069</td>\n",
-       "      <td>0.882867</td>\n",
-       "      <td>0.916323</td>\n",
-       "      <td>[[177, 7], [15, 101]]</td>\n",
+       "      <td>2.042474</td>\n",
+       "      <td>0.864865</td>\n",
+       "      <td>0.885609</td>\n",
+       "      <td>0.927141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomForestClassifier (Balanced class_weight)</th>\n",
-       "      <td>2.643201</td>\n",
-       "      <td>0.926667</td>\n",
-       "      <td>0.87069</td>\n",
-       "      <td>0.882867</td>\n",
-       "      <td>0.916323</td>\n",
-       "      <td>[[177, 7], [15, 101]]</td>\n",
+       "      <td>2.162619</td>\n",
+       "      <td>0.864865</td>\n",
+       "      <td>0.883978</td>\n",
+       "      <td>0.924496</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 logloss  accuracy    recall  \\\n",
-       "CatBoostClassifier (scale_pos_weight)           2.042474  0.943333  0.905172   \n",
-       "CatBoostClassifier                              2.042474  0.943333  0.896552   \n",
-       "AdaBoostClassifier                              1.922328  0.946667   0.87931   \n",
-       "RandomForestClassifier                          2.643201  0.926667   0.87069   \n",
-       "RandomForestClassifier (Balanced class_weight)  2.643201  0.926667   0.87069   \n",
+       "                                                 logloss    recall   f2score  \\\n",
+       "CatBoostClassifier (scale_pos_weight)           1.081310  0.936937  0.945455   \n",
+       "CatBoostClassifier                              1.201455  0.918919  0.932358   \n",
+       "AdaBoostClassifier                              1.441746  0.900901  0.917431   \n",
+       "RandomForestClassifier                          2.042474  0.864865  0.885609   \n",
+       "RandomForestClassifier (Balanced class_weight)  2.162619  0.864865  0.883978   \n",
        "\n",
-       "                                                 f2score       auc  \\\n",
-       "CatBoostClassifier (scale_pos_weight)           0.913043  0.936282   \n",
-       "CatBoostClassifier                              0.907504  0.934689   \n",
-       "AdaBoostClassifier                              0.897887   0.93422   \n",
-       "RandomForestClassifier                          0.882867  0.916323   \n",
-       "RandomForestClassifier (Balanced class_weight)  0.882867  0.916323   \n",
-       "\n",
-       "                                                     confusion_matrix  \n",
-       "CatBoostClassifier (scale_pos_weight)           [[178, 6], [11, 105]]  \n",
-       "CatBoostClassifier                              [[179, 5], [12, 104]]  \n",
-       "AdaBoostClassifier                              [[182, 2], [14, 102]]  \n",
-       "RandomForestClassifier                          [[177, 7], [15, 101]]  \n",
-       "RandomForestClassifier (Balanced class_weight)  [[177, 7], [15, 101]]  "
+       "                                                     auc  \n",
+       "CatBoostClassifier (scale_pos_weight)           0.963177  \n",
+       "CatBoostClassifier                              0.956814  \n",
+       "AdaBoostClassifier                              0.947805  \n",
+       "RandomForestClassifier                          0.927141  \n",
+       "RandomForestClassifier (Balanced class_weight)  0.924496  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scores = pd.DataFrame(model_scores).sort_values(by='f2score', axis=1, ascending=False).T\n",
-    "scores.head()"
+    "model_scores = pd.DataFrame(model_scores).sort_values(by='f2score', axis=1, ascending=False).T\n",
+    "model_scores.head()"
    ]
   },
   {
@@ -558,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "688c220d",
    "metadata": {},
    "outputs": [
@@ -567,22 +551,16 @@
      "output_type": "stream",
      "text": [
       "Learning rate set to 0.011136\n",
-      "0:\tlearn: 0.9140855\ttotal: 6.1ms\tremaining: 6.09s\n",
-      "100:\tlearn: 0.9740146\ttotal: 540ms\tremaining: 4.8s\n",
-      "200:\tlearn: 0.9778118\ttotal: 1.07s\tremaining: 4.25s\n",
-      "300:\tlearn: 0.9812538\ttotal: 1.55s\tremaining: 3.61s\n",
-      "400:\tlearn: 0.9839230\ttotal: 2.01s\tremaining: 3.01s\n",
-      "500:\tlearn: 0.9866026\ttotal: 2.5s\tremaining: 2.49s\n",
-      "600:\tlearn: 0.9891529\ttotal: 2.95s\tremaining: 1.96s\n",
-      "700:\tlearn: 0.9921700\ttotal: 3.42s\tremaining: 1.46s\n",
-      "800:\tlearn: 0.9944053\ttotal: 3.92s\tremaining: 974ms\n",
-      "900:\tlearn: 0.9957552\ttotal: 4.39s\tremaining: 482ms\n",
-      "999:\tlearn: 0.9966948\ttotal: 4.84s\tremaining: 0us\n"
+      "0:\tlearn: 0.6847359\ttotal: 10.4ms\tremaining: 10.4s\n",
+      "300:\tlearn: 0.2260950\ttotal: 1.37s\tremaining: 3.19s\n",
+      "600:\tlearn: 0.1675987\ttotal: 2.73s\tremaining: 1.81s\n",
+      "900:\tlearn: 0.1290977\ttotal: 4.01s\tremaining: 441ms\n",
+      "999:\tlearn: 0.1188084\ttotal: 4.43s\tremaining: 0us\n"
      ]
     }
    ],
    "source": [
-    "model = CatBoostClassifier(scale_pos_weight=scale_pos_weight, eval_metric='PRAUC', early_stopping_rounds=50, verbose=100)\n",
+    "model = CatBoostClassifier(scale_pos_weight=scale_pos_weight, verbose=300, random_seed=seed)\n",
     "\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)"
@@ -590,29 +568,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "530267c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'logloss': 2.042473692049972,\n",
-       " 'accuracy': 0.9433333333333334,\n",
-       " 'recall': 0.9051724137931034,\n",
-       " 'f2score': 0.9130434782608695,\n",
-       " 'auc': 0.9362818590704647,\n",
-       " 'confusion_matrix': array([[178,   6],\n",
-       "        [ 11, 105]])}"
+       "{'logloss': 1.0813096016735149,\n",
+       " 'recall': 0.9369369369369369,\n",
+       " 'f2score': 0.9454545454545454,\n",
+       " 'auc': 0.9631774631774631}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "metrics = evaluate_model(y_test, y_pred)\n",
+    "metrics = get_metric_scores(y_test, y_pred)\n",
     "metrics"
    ]
   }
