Added predict pipeline and flask app

--- a/notebook/01_EDA_CANCER_DIAGNOSIS.ipynb
+++ b/notebook/01_EDA_CANCER_DIAGNOSIS.ipynb
@@ -31,13 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "00864280",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set_theme(style='whitegrid')\n",
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "dbf898f6",
    "metadata": {},
    "outputs": [
@@ -718,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "2c9acbb0",
    "metadata": {},
    "outputs": [
@@ -732,7 +731,7 @@
     }
    ],
    "source": [
-    "pos, neg = data.Diagnosis.value_counts(normalize=True)\n",
+    "neg, pos = data.Diagnosis.value_counts(normalize=True)\n",
     "\n",
     "print(f'Percentage of positive class: {pos*100:.2f}')\n",
     "print(f'Percentage of negative class: {neg*100:.2f}')"
@@ -743,7 +742,7 @@
    "id": "555713fe",
    "metadata": {},
    "source": [
-    "Insight: The target variable is imbalanced with about 37 negative diagnosis in a random sample of 100 diagnosed persons"
+    "Insight: The target variable is imbalanced with about 37 positive diagnosis in a random sample of 100 diagnosed persons"
    ]
   }
  ],
