Added dataset link

--- a/notebook/01_EDA_CANCER_DIAGNOSIS.ipynb
+++ b/notebook/01_EDA_CANCER_DIAGNOSIS.ipynb
@@ -20,7 +20,7 @@
     "- This project aims to save the time spent by medical doctors in diagnosing patients for cancer by building a model with high accuracy in predicting a positive diagnosis\n",
     "\n",
     "## 2) Data collection\n",
-    "- Dataset source - Kaggle\n",
+    "- Dataset source - https://www.kaggle.com/datasets/rabieelkharoua/cancer-prediction-dataset\n",
     "- The dataset has 9 columns and 1,500 rows\n",
     "- Column descriptions\n",
     "\n",
@@ -41,7 +41,7 @@
     "import seaborn as sns\n",
     "sns.set_theme(style='whitegrid')\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5177c35a",
    "metadata": {},
    "outputs": [
@@ -179,12 +179,12 @@
    "source": [
     "data = pd.read_csv('data/The_Cancer_data_1500_V2.csv')\n",
     "\n",
-    "data.head()"
+    "data.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "cf6068bc",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
     }
    ],
    "source": [
-    "data.shape"
+    "data.shape\n"
    ]
   },
   {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1f593666",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "data.isna().sum()"
+    "data.isna().sum()\n"
    ]
   },
   {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7ba1a78d",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "data.duplicated().sum()"
+    "data.duplicated().sum()\n"
    ]
   },
   {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "81f260de",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
     }
    ],
    "source": [
-    "data.info()"
+    "data.info()\n"
    ]
   },
   {
@@ -369,7 +369,7 @@
     "\n",
     "print(f'\\nNumber of categorical columns: {len(categorical_cols)}')\n",
     "\n",
-    "print(f'Categorical columns: {categorical_cols}')"
+    "print(f'Categorical columns: {categorical_cols}')\n"
    ]
   },
   {
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "data.nunique()"
+    "data.nunique()\n"
    ]
   },
   {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "43610998",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
     }
    ],
    "source": [
-    "data.describe()"
+    "data.describe()\n"
    ]
   },
   {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "e716cd49",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
     "    plt.subplot(data.shape[1]//3,3,i+1)\n",
     "    sns.histplot(data, x=col, bins=30, hue='Diagnosis', kde=True)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "0e1e810a",
    "metadata": {},
    "outputs": [
@@ -712,7 +712,7 @@
     }
    ],
    "source": [
-    "sns.countplot(data, x='Diagnosis', stat='percent')"
+    "sns.countplot(data, x='Diagnosis', stat='percent')\n"
    ]
   },
   {
@@ -734,7 +734,7 @@
     "neg, pos = data.Diagnosis.value_counts(normalize=True)\n",
     "\n",
     "print(f'Percentage of positive class: {pos*100:.2f}')\n",
-    "print(f'Percentage of negative class: {neg*100:.2f}')"
+    "print(f'Percentage of negative class: {neg*100:.2f}')\n"
    ]
   },
   {
